# icli-rs

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  cliff.toml  release.toml  rustfmt.toml
.github/workflows/: bump-homebrew-formula.yml  release.yml
.make/: help
icli_derive/: Cargo.toml  README.md
icli_derive/src/: lib.rs
icli_derive/src/derives/: command.rs
src/: cli.rs  consts.rs  main.rs  prelude.rs  traits.rs
src/commands/: completion.rs  mod.rs  new.rs
src/commands/config/: generate.rs  list.rs  mod.rs
src/commands/ip/: mod.rs  ps1.rs
src/commands/makefile/: add_help.rs  genhelp.rs  mod.rs
src/commands/shinc/: build.rs  completion.rs  config.rs  env.rs  man.rs  mod.rs  tag.rs
src/commands/vpn/: makeconfig.rs  mod.rs
src/commands/vpn/app/: mod.rs  quantumultx.rs
src/commands/vpn/app/clash/: clash_verge.rs  clashx.rs  mod.rs
src/config/: clash.rs  mod.rs  proxy.rs  quantumultx.rs
src/utils/: fs.rs
templates/cli/: cmd.rs  mod.rs
templates/config/: default.toml  linux.toml  macos.toml  windows.toml
templates/config/os/: linux.toml  macos.toml  windows.toml
templates/vpn/clash/: profile.provider.yaml
templates/vpn/quantumultx/: QuantumultX.conf
