[workspace]
resolver = "2"
members = ["icli_derive"]

[workspace.package]
license = "MIT"
edition = "2021"

[package]
name = "icli"
version = "0.1.0"
description = "`icli` is a personal command-line tool, which includes various commonly used utilities."
repository = "https://github.com/druagoon/icli-rs"
edition.workspace = true
license.workspace = true
categories = ["command-line-interface"]
keywords = ["icli", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clashx", "clash_verge", "quantumultx"]

vpn = []
clash = ["vpn"]
clashx = ["clash"]
clash_verge = ["clash"]
quantumultx = ["vpn"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.2"
config = "0.14.0"
env_logger = "0.11.3"
heck = "0.5.0"
icli_derive = { path = "./icli_derive" }
log = "0.4.22"
once_cell = "1.19.0"
pnet = "0.34.0"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tera = "1.19.1"
