[workspace]
resolver = "2"
members = ["icli_derive"]

[workspace.package]
license = "MIT"
edition = "2021"

[package]
name = "icli"
version = "1.2.0"
description = "`icli` is a personal command-line tool, which includes various commonly used utilities."
repository = "https://github.com/druagoon/icli-rs"
edition.workspace = true
license.workspace = true
publish = false
categories = ["command-line-interface"]
keywords = ["icli", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clashx", "clash_verge", "quantumultx"]

vpn = []
clash = ["vpn"]
clashx = ["clash"]
clash_verge = ["clash"]
quantumultx = ["vpn"]

[dependencies]
anyhow = "1.0.86"
argc = "1.20.1"
clap = { version = "4.5.16", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "2.2.1"
clap_complete = "4.5.22"
config = "0.14.0"
env_logger = "0.11.5"
heck = "0.5.0"
icli_derive = { path = "./icli_derive" }
log = "0.4.22"
once_cell = "1.19.0"
pnet = "0.35.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tera = "1.20.0"
toml = { version = "0.8.19", features = ["preserve_order"] }
