[workspace]
resolver = "2"
members = ["icli_derive"]

[workspace.package]
license = "MIT"
edition = "2021"

[package]
name = "icli"
version = "1.3.0"
description = "A personal command-line tool includes various commonly used utilities."
repository = "https://github.com/druagoon/icli-rs"
edition.workspace = true
license.workspace = true
publish = false
categories = ["command-line-interface"]
keywords = ["icli", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clashx", "clash_verge", "quantumultx"]

vpn = []
clash = ["vpn"]
clashx = ["clash"]
clash_verge = ["clash"]
quantumultx = ["vpn"]

[dependencies]
anyhow = "1.0.97"
argc = "1.22.0"
clap = { version = "4.5.31", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.46"
config = "0.15.9"
env_logger = "0.11.6"
heck = "0.5.0"
icli_derive = { path = "./icli_derive" }
log = "0.4.26"
once_cell = "1.20.3"
pnet = "0.35.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = [
    "blocking",
    "native-tls-vendored",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tera = "1.20.0"
toml = { version = "0.8.20", features = ["preserve_order"] }
