[package]
name = "icli_derive"
version = "0.1.0"
description = "`icli` is a personal command-line tool, which includes various commonly used utilities."
repository = "https://github.com/druagoon/icli-rs/tree/master/icli_derive"
categories = [
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
]
keywords = ["icli", "cli", "parse", "derive", "proc_macro"]
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["extra-traits"] }
