[package]
name = "icli_derive"
version = "1.0.0"
description = "`icli` is a personal command-line tool, which includes various commonly used utilities."
repository = "https://github.com/druagoon/icli-rs/tree/master/icli_derive"
license.workspace = true
edition.workspace = true
publish = false
categories = [
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
]
keywords = ["icli", "cli", "parse", "derive", "proc_macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.100", features = ["extra-traits"] }
